@@ -1,6 +1,12 @@
 devel
 -----
 
+* Allow usage of document projections and traversal projections in slightly
+  more cases, specifically when the document's or traversal's output
+  variables were used in subqueries. Previously the usage of the document or
+  traversal output variables in subqueries could lead to projections being 
+  disabled.
+
 * Fixed issue #18053: Computed Values become null when Schema is modified.
 
 * BTS-1193: Fix for schema update. When removing a field and then inserting a 
